--- a/src/styles/layouts/bandos-recent-articles-with-sidebar.less
+++ b/src/styles/layouts/bandos-recent-articles-with-sidebar.less
@@ -46,7 +46,6 @@
 
     &.news-link--external {
       background-color: #0ea5e9;
-      margin-left: 1rem;
     }
   }
 
