--- a/src/styles/pages/buscar.less
+++ b/src/styles/pages/buscar.less
@@ -130,3 +130,9 @@
     }
   }
 }
+
+body.dark-mode {
+  .cs-search-tips {
+    background-color: var(--background-sections) !important;
+  }
+}
